// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sticky becomes sticky and unsticky when scrolling past it 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div
        class="contains-tc-sticky"
        style="width: 600px; margin: 0px auto;"
      >
        <div
          data-tc-sticky-placeholder="true"
          style="display: block; margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
  </div>
  <div
    data-tc-sticky-container="true"
    style="top: 0px; z-index: 999; position: fixed; left: 0px; width: 100%; transform: translateY(-10px);"
  >
    <div
      class="tc-sticky"
      style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
    >
      <div
        data-tc-sticky-sizer="true"
        style="width: 600px; margin-left: 0px; height: 100%; box-sizing: border-box;"
      />
    </div>
  </div>
</body>
`;

exports[`Sticky becomes sticky and unsticky when scrolling past it 2`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div
        class=""
        style="width: 600px; margin: 0px auto;"
      >
        <div
          data-tc-sticky-placeholder="true"
          style="display: none; margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
        <div
          data-tc-sticky-container="true"
          style=""
        >
          <div
            class=""
            style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
          >
            <div
              data-tc-sticky-sizer="true"
              style=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sticky cleans sticky node unmounting 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</body>
`;

exports[`Sticky correctly sets the sizer width and margin when sticky 1`] = `
<div
  data-tc-sticky-sizer="true"
  style="width: 800px; margin-left: 30px; height: 100%; box-sizing: border-box;"
/>
`;

exports[`Sticky remains sticky when continuing scrolling 1`] = `
<body>
  <div
    id="react-root"
  >
    <div
      class="contains-tc-sticky"
    >
      <div
        data-tc-sticky-placeholder="true"
        style="display: block; margin-top: 10px; margin-bottom: 0px; height: 60px;"
      />
    </div>
  </div>
  <div
    data-tc-sticky-container="true"
    style="top: 0px; z-index: 999; position: fixed; left: 0px; width: 100%; transform: translateY(-10px);"
  >
    <div
      class="tc-sticky"
      data-sticky-progress="5"
      style="margin-top: 10px; height: 60px;"
    >
      <div
        data-tc-sticky-sizer="true"
        style="width: 1000px; margin-left: 0px; height: 100%; box-sizing: border-box;"
      />
    </div>
  </div>
</body>
`;

exports[`Sticky renders with custom props 1`] = `
<body>
  <div
    id="react-root"
  >
    <span>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="display: none;"
        />
        <div
          data-tc-sticky-container="true"
        >
          <span
            class="test-class-name"
            style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
          >
            <div
              data-tc-sticky-sizer="true"
            >
              children
            </div>
          </span>
        </div>
      </div>
    </span>
  </div>
</body>
`;

exports[`Sticky renders with default props 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div
        style="width: 600px; margin: 0px auto;"
      >
        <div
          data-tc-sticky-placeholder="true"
          style="display: none;"
        />
        <div
          data-tc-sticky-container="true"
        >
          <div
            class=""
            style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
          >
            <div
              data-tc-sticky-sizer="true"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sticky shouldBeSticky is checked when deciding whether to become sticky 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div
        data-tc-sticky-placeholder="true"
        style="display: none;"
      />
      <div
        data-tc-sticky-container="true"
      >
        <div
          class=""
        >
          <div
            data-tc-sticky-sizer="true"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sticky triggers the sticky detection on resize 1`] = `
<body>
  <div
    class="contains-tc-sticky"
    id="react-root"
  >
    <div
      data-tc-sticky-placeholder="true"
      style="display: block; margin-top: 10px; margin-bottom: 0px; height: 60px;"
    />
  </div>
  <div
    data-tc-sticky-container="true"
    style="top: 10px; z-index: 999; position: fixed; left: 0px; width: 100%; transform: translateY(-10px);"
  >
    <div
      class="tc-sticky"
      data-sticky-progress="16"
      style="margin-top: 10px; height: 60px;"
    >
      <div
        data-tc-sticky-sizer="true"
        style="width: 1000px; margin-left: 0px; height: 100%; box-sizing: border-box;"
      />
    </div>
  </div>
</body>
`;
